--- a/Intro.html
+++ b/Intro.html
@@ -2,9 +2,22 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Ashesh Thakkar</title>
+    <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <title>Ashesh Thakkar</title> <!-- Add my name to appear on tab-->
 </head>
 <body>
+    <header class="header">
+        <h1 tabindex="0">Ashesh Thakkar</h1>
+        <div>
+            <nav>
+                <ul>
+                    <li>About Me</li>
+                    <li>Work</li>
+                    <li>Contact Me</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     
 </body>
 </html>
