--- a/Intro.html
+++ b/Intro.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <title>Ashesh Thakkar</title> <!-- Add my name to appear on tab-->
 </head>
