add image to data/page

--- a/Intro.html
+++ b/Intro.html
@@ -19,6 +19,9 @@
             </nav>
         </div>
     </header>
-    
+    <aside class="aside">
+        <h2> About Me</h2>
+        <img src="./assets/images/asheshpic.jpg" alt="Ashesh pic" class="right">
+    </aside>
 </body>
 </html>
