About me/format

--- a/Intro.html
+++ b/Intro.html
@@ -9,6 +9,7 @@
 <body>
     <header class="header">
         <h1 tabindex="0">Ashesh Thakkar</h1>
+       
         <div>
             <nav>
                 <ul>
@@ -19,9 +20,19 @@
             </nav>
         </div>
     </header>
-    <aside class="aside">
-        <h2> About Me</h2>
-        <img src="./assets/images/asheshpic.jpg" alt="Ashesh pic" class="right">
-    </aside>
+
+    <div class="content">
+    <section class="AboutMe">
+        <h2 class="h2"> </br></br>About Me</h2>
+        <img src="./assets/images/asheshpic.jpg" alt="Ashesh pic" class="left">
+      
+        <p>
+            I am a very enthusiast and dedicated learner.
+         I have recently started to explore the field of web page developement.
+         I'm a proffesional red seal heavy duty mechanic.
+         I play chess to keep my brain agile.
+        </p>
+    </section>
+</div>
 </body>
 </html>
