--- a/Intro.html
+++ b/Intro.html
@@ -13,9 +13,17 @@
         <div>
             <nav>
                 <ul>
-                    <li>About Me</li>
-                    <li>Work</li>
-                    <li>Contact Me</li>
+                    <li>
+                        <a href="#AboutMe">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#Work">Work
+                        </a> 
+                    </li>
+                    <li>
+                    <a href="#Contact Me">Contact Me
+                    </a>   
+                    </li>
                 </ul>
             </nav>
         </div>
