--- a/Intro.html
+++ b/Intro.html
@@ -41,6 +41,16 @@
          I play chess to keep my brain agile.
         </p>
     </section>
+    <section class="work">
+        <h2 class="h2"> </br></br>Work</h2>
+        <img src="./assets/images/Horiseon.jpg" alt="Horiseon" class="horiseon">
+        <img src="./assets/images/Chess.jpg" alt="Chess app" class="chess">
+        <img src="assets/images/Board games.png" alt="Board games" class="board">
+        <img src="./assets/images/Switch.jpg" alt="Switch" class="switch">
+        <p>
+         I have developed following web pages in my early stages of career.Click the icon and enjoy!!
+         </p> 
+         
 </div>
 </body>
 </html>
