--- a/Intro.html
+++ b/Intro.html
@@ -42,15 +42,30 @@
         </p>
     </section>
     <section class="work">
-        <h2 class="h2"> </br></br>Work</h2>
+        <h2 class="w"> </br></br>Work</h2>
+        <sub>
+            <a href="./assets/Week1challenge/index.html">
         <img src="./assets/images/Horiseon.jpg" alt="Horiseon" class="horiseon">
+        </a>
         <img src="./assets/images/Chess.jpg" alt="Chess app" class="chess">
+        </sub>
+        <sub>
         <img src="assets/images/Board games.png" alt="Board games" class="board">
         <img src="./assets/images/Switch.jpg" alt="Switch" class="switch">
+        </sub>
         <p>
          I have developed following web pages in my early stages of career.Click the icon and enjoy!!
          </p> 
-         
+    </section>
+
+    <section class="contact">
+            <h2 class="c">Contact Me</h2>          
+            <p>
+             <strong>Cell Phone: </strong>+1 705-561-9730.       <strong>Email: </strong><a href="#">thakkarashesh026@gmail.com</a>
+            </p>
+    </section>
 </div>
+
+<footer class="footer">Keep Learning and Keep Growing</footer>
 </body>
 </html>
