--- a/Intro.html
+++ b/Intro.html
@@ -14,14 +14,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#AboutMe">About Me</a>
+                        <a href="#1">About Me</a>
                     </li>
                     <li>
-                        <a href="#Work">Work
-                        </a> 
+                        <a href="#2">Work </a> 
                     </li>
                     <li>
-                    <a href="#Contact Me">Contact Me
+                    <a href="#3">Contact Me
                     </a>   
                     </li>
                 </ul>
@@ -30,7 +29,7 @@
     </header>
 
     <div class="content">
-    <section class="AboutMe">
+    <section class="AboutMe" id="1">
         <h2 class="h2"> </br></br>About Me</h2>
         <img src="./assets/images/asheshpic.jpg" alt="Ashesh pic" class="left">
       
@@ -41,24 +40,29 @@
          I play chess to keep my brain agile.
         </p>
     </section>
-    <section class="work">
+    <section class="work" id="2">
         <h2 class="w"> </br></br>Work</h2>
         <sub>
             <a href="./assets/Week1challenge/index.html">
         <img src="./assets/images/Horiseon.jpg" alt="Horiseon" class="horiseon">
-        </a>
-        <img src="./assets/images/Chess.jpg" alt="Chess app" class="chess">
+            </a>
+        
+            <a href="#">
+        <img src="./assets/images/Chess.jpg" alt="Chess app" class="chess"></a>
         </sub>
+
         <sub>
-        <img src="assets/images/Board games.png" alt="Board games" class="board">
-        <img src="./assets/images/Switch.jpg" alt="Switch" class="switch">
+            <a href="#">
+        <img src="assets/images/Board games.png" alt="Board games" class="board"></a>
+        <a href="#">
+        <img src="./assets/images/Switch.jpg" alt="Switch" class="switch"></a>
         </sub>
         <p>
          I have developed following web pages in my early stages of career.Click the icon and enjoy!!
          </p> 
     </section>
 
-    <section class="contact">
+    <section class="contact" id="3">
             <h2 class="c">Contact Me</h2>          
             <p>
              <strong>Cell Phone: </strong>+1 705-561-9730.       <strong>Email: </strong><a href="#">thakkarashesh026@gmail.com</a>
