--- a/Intro.html
+++ b/Intro.html
@@ -43,7 +43,7 @@
     <section class="work" id="2">
         <h2 class="w"> </br></br>Work</h2>
         <sub>
-            <a href="./horiseon/index.html">
+            <a href="./horiseon/">
         <img src="./assets/images/Horiseon.jpg" alt="Horiseon" class="horiseon">
             </a>
         
