highlighted first app

--- a/Intro.html
+++ b/Intro.html
@@ -34,16 +34,16 @@
         <img src="./assets/images/asheshpic.jpg" alt="Ashesh pic" class="left">
       
         <p>
-            I am a very enthusiast and dedicated learner.
-         I have recently started to explore the field of web page developement.
-         I'm a proffesional red seal heavy duty mechanic.
+            I'm a very enthusiast and dedicated learner.
+         I have recently started to explore the field of web page development.
+         I'm a professional red seal heavy duty mechanic.
          I play chess to keep my brain agile.
         </p>
     </section>
     <section class="work" id="2">
         <h2 class="w"> </br></br>Work</h2>
         <sub>
-            <a href="./horiseon/">
+            <a href="./horiseon">
         <img src="./assets/images/Horiseon.jpg" alt="Horiseon" class="horiseon">
             </a>
         
