--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <title>Ashesh Thakkar</title> <!-- Add my name to appear on tab-->
 </head>
@@ -42,24 +42,26 @@
     </section>
     <section class="work" id="2">
         <h2 class="w"> </br></br>Work</h2>
-        <sub>
+        <div class="row">
+            <div class="column">
             <a href="Horiseon/index.html">
         <img src="./assets/images/Horiseon.jpg" alt="Horiseon" class="horiseon">
             </a>
         
             <a href="#">
         <img src="./assets/images/Chess.jpg" alt="Chess app" class="chess"></a>
-        </sub>
+    </div>
+    <div class="column">
 
-        <sub>
             <a href="#">
         <img src="assets/images/Board games.png" alt="Board games" class="board"></a>
         <a href="#">
         <img src="./assets/images/Switch.jpg" alt="Switch" class="switch"></a>
-        </sub>
-        <p>
+    </div>
+        <p text="center">
          I have developed following web pages in my early stages of career.Click the icon and enjoy!!
          </p> 
+        </div>
     </section>
 
     <section class="contact" id="3">
