css and html change

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <title>Ashesh Thakkar</title> <!-- Add my name to appear on tab-->
 </head>
@@ -30,7 +30,7 @@
 
     <div class="content">
     <section class="AboutMe" id="1">
-        <h2 class="h2"> </br></br>About Me</h2>
+        <h2 class="h2">About Me</h2>
         <img src="./assets/images/asheshpic.jpg" alt="Ashesh pic" class="left">
       
         <p>
@@ -41,7 +41,7 @@
         </p>
     </section>
     <section class="work" id="2">
-        <h2 class="w"> </br></br>Work</h2>
+        <h2 class="w">Work</h2>
         <div class="row">
             <div class="column">
             <a href="Horiseon/index.html">
@@ -54,11 +54,11 @@
     <div class="column">
 
             <a href="#">
-        <img src="assets/images/Board games.png" alt="Board games" class="board"></a>
+        <img src="assets/images/Boardgames.png" alt="Board games" class="board"></a>
         <a href="#">
         <img src="./assets/images/Switch.jpg" alt="Switch" class="switch"></a>
     </div>
-        <p text="center">
+        <p>
          I have developed following web pages in my early stages of career.Click the icon and enjoy!!
          </p> 
         </div>
